fix: align tab text to the middle

--- a/frontend/src/components/Tabs/Tabs.module.scss
+++ b/frontend/src/components/Tabs/Tabs.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
+    text-align: center;
 
     &:hover,
     &.selected:hover {
